# FlockHistory

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yaml
android_app/: settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/androidTest/java/de/flock_history/flock_history/: ExampleInstrumentedTest.kt
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/com/example/test/: MainActivity.kt
android_app/app/src/main/java/de/flock_history/: MainActivity.kt  MainViewModel.kt  Util.kt
android_app/app/src/main/java/de/flock_history/db/: Sheep.kt
android_app/app/src/main/java/de/flock_history/screens/: EntryProcessScreen.kt  HomeScreen.kt  InventoryProcessScreen.kt  MedicalTreatmentProcessScreen.kt  ScannerScreen.kt  SheepListScreen.kt
android_app/app/src/main/java/de/flock_history/ui/theme/: Color.kt  Theme.kt  Type.kt
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/test/java/de/flock_history/flock_history/: ExampleUnitTest.kt
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
doc/: TODO.txt  UI_operating_assistance.html  UI_operating_assistance.md  UseCases.md
test/: db_interface.cc  tag_ocr_test.cc
